--- a/package.json
+++ b/package.json
@@ -7,5 +7,5 @@
       "android"
     ]
   },
-  "description": "A starting point for a Cordova Plugin"
+  "description": "The cordova plugin for the scanner U8000S Edit"
 }
