--- a/plugin.xml
+++ b/plugin.xml
@@ -7,6 +7,8 @@
     <description></description>
     <license>MIT</license>
     <keywords></keywords>
+    <repo>https://github.com/bioleyl/cordova-plugin-scan-u8000s</repo>
+    <issue>https://github.com/bioleyl/cordova-plugin-scan-u8000s/issues</issue>
 
     <!-- android -->
     <platform name="android">
